# yast-online-update-configuration

./: .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  _cvsignore  yast2-online-update-configuration.spec.in
.github/workflows/: ci.yml
agents/: Makefile  Makefile.am  Makefile.in
doc/: Makefile  Makefile.am  Makefile.in
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-online-update-configuration.changes  yast2-online-update-configuration.spec
src/: Makefile  Makefile.am  Makefile.in
src/autoyast-rnc/: online_update_configuration.rnc
src/clients/: Makefile  Makefile.am  Makefile.in  online_update_configuration.rb  online_update_configuration.ycp  online_update_configuration_auto.rb  online_update_configuration_auto.ycp
src/config/: Makefile  Makefile.am  Makefile.in
src/desktop/: online_update_configuration.desktop  org.opensuse.yast.OnlineUpdateConfiguration.desktop
src/dialogs/: Makefile  Makefile.am  Makefile.in  OUCDialogs.ycp
src/include/online-update-configuration/: OUCDialogs.rb
src/lib/online-update-configuration/: zypp_config.rb
src/modules/: Makefile  Makefile.am  Makefile.in  OnlineUpdateConfiguration.rb  OnlineUpdateConfiguration.ycp
src/scripts/: Makefile  Makefile.in  online_update
test/: online_update_configuration_test.rb  test_helper.rb  zypp_config_test.rb
testsuite/: Makefile  Makefile.in
