# Makefile.am for online-update-configuration/config

desktop_DATA = online_update_configuration.desktop

rncdir = $(schemadir)/autoyast/rnc
rnc_DATA = online_update_configuration.rnc

fillup_DATA = sysconfig.automatic_online_update-yast2-online-update-configuration

EXTRA_DIST = $(desktop_DATA) $(rnc_DATA) $(fillup_DATA)

include $(top_srcdir)/Makefile.am.common
